[package]
name = "zenith"
version = "0.15.0"
authors = ["Benjamin Vaisvil"]
edition = "2018"
description = "Similar to top or htop but with CPU, Network Usage, and Disk Usage charts."
readme = "README.md"
homepage = "https://github.com/bvaisvil/zenith"
repository = "https://github.com/bvaisvil/zenith"
license = "MIT"
keywords = ["system monitor", "tui", "process monitor", "sysinfo"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
nvidia = ["nvml-wrapper"]

[dependencies]
ratatui = { version = "0.29.*", features = [
    "crossterm",
], default-features = false }
crossterm = "0.28.*"
byte-unit = "~5.2.0"

num-derive = "0.4.2"
num-traits = "0.2"
futures = "0.3.32"
gumdrop = { version = "~0.8.1", features = ["default_expr"] }
chrono = "~0.4.44"
sysinfo = "0.38"
dirs-next = "2.0.0"
serde = { version = "~1.0.228", features = ["derive"] }
serde_derive = "~1.0.228"
flate2 = "1.1.9"
bincode = "1.3"
starship-battery = "0.10.*"
signal-hook = "~0.4.3"
log = "~0.4.29"
env_logger = { version = "~0.11.10", default-features = false }
libc = "0.2"
nvml-wrapper = { version = "0.12.0", optional = true }
unicode-width = "0.2.0"
[target.'cfg(unix)'.dependencies]
uzers = "0.12.2"

[target.'cfg(target_os = "linux")'.dependencies]
linux-taskstats = { version = "0.7.0", default-features = false }
procfs = "0.18"
